crostini: Fix crash in guest user session

Bug: 836187
Change-Id: Id072e00ca0d6e4f278a43f34deea6880d2aa0536
Reviewed-on: https://chromium-review.googlesource.com/1026039
Reviewed-by: Timothy Loh <timloh@chromium.org>
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553694}
Former-commit-id: f077d19beabbb5ce4e6dc60eb23dce124ec18f56